# distant_speech_recognition

./: LICENSE  README.md
btk20_src/: CMakeLists.txt  FindNumPy.cmake  FindSndFile.cmake
btk20_src/aec/: CMakeLists.txt  aec.cc  aec.h  aec.i
btk20_src/beamformer/: CMakeLists.txt  beamformer.cc  beamformer.h  beamformer.i  modalbeamformer.cc  modalbeamformer.h  taylorseries.cc  taylorseries.h  tracker.h
btk20_src/common/: common.cc  error.c  jexception.cc  jpython_error.h  mlist.h  refcount.h
btk20_src/convolution/: CMakeLists.txt  convolution.h
btk20_src/dereverberation/: dereverberation.cc  dereverberation.h  dereverberation.i
btk20_src/feature/: feature.cc  feature.h  feature.i  lpc.h  spectralestimator.cc  spectralestimator.h  videofeature.h
btk20_src/include/: matrix.i  typedefs.i  vector.i
btk20_src/lib/: CMakeLists.txt  GGDcEst.py  GGDcEst2.py  SRP.py  SrpPhatLocalizer.py  _dbase.py  cepstralFrontend.py  dbase.py  featureADC.py  globalOpt.py  lmsBeamforming.py  mkBeamforming.py  mlBeamforming.py  pybeamformer.py  pyggd.py  pykaldiarkio.py  pykalman.py  pylocalizer.py  pytdoa.py  signalGen.py  signal_generator.py  sound.py  subbandBeamforming.py
btk20_src/lms/: CMakeLists.txt  lms.cc  lms.h
btk20_src/localization/: CMakeLists.txt  localization.cc  localization.h  localization.i
btk20_src/matrix/: CMakeLists.txt  blas1_c.cc  blas1_c.h  gslmatrix.cc  linpack_c.cc  linpack_c.h  matrix.i
btk20_src/modulated/: modulated.cc  modulated.h  modulated.i  pc_lattice.c  prototype_design.cc  prototype_design.h
btk20_src/objective_measure/: objective_measure.cc  objective_measure.h
btk20_src/postfilter/: CMakeLists.txt  binauralprocessing.cc  binauralprocessing.h  postfilter.cc  postfilter.i  spectralsubtraction.cc
btk20_src/sad/: ica.cc  ica.h  neural_spnsp_det.c  neural_spnsp_incl.h  sad.cc  sad.h  sad_feature.h
btk20_src/square_root/: square_root.cc  square_root.i
btk20_src/src/: beamformerDS.cc  calcTimeDelay.cc  quality_assessment.cc  synthMultiChannelWav
btk20_src/stream/: CMakeLists.txt  file_stream.cc  pyStream.cc  pyStream.h  stream.cc  stream.i
btk20_src/tde/: CMakeLists.txt  tde.cc  tde.h  tde.i  tdoa.py
btk20_src/tools/filterbank/: design_de_haan_filter.py  design_nyquist_filter.m  design_nyquist_filter.py  design_pr_filter.py  test_oversampled_dft_filter.py
btk20_src/tools/filterbank/prototype.ny/: M=64-m=4-r=2.m  g-M64-m4-r2.pickle  h-M64-m4-r2.pickle
btk20_src/unit_test/: correlate.py  log_power_extractor.py  mfcc_extractor.py  test_audio_reader.py  test_online_beamforming.py  test_sos_batch_beamforming.py  test_source_tracking.py  test_subband_aec.py  test_subband_dereverberator.py  test_tdoa_estimator.py  video.py
btk20_src/unit_test/confs/: bmvdr_tfmask.json  bmvdr_vad.json  ds.json  ds_and_zelinski.json  ekfst.json  gcc_phat_tdoae.json  gev_tfmask.json  gev_vad.json  gsclms.json  gscrls.json  iekfst.json  lcmv_and_zelinski.json  nlms_aec.json  sd.json  sd_and_lefkimmiatis.json  sd_and_mccowan.json  sd_and_zelinski.json  smimvdr.json  wpe.json
btk20_src/unit_test/data/: notes.txt
btk20_src/unit_test/data/CMU/R1/M1005/KINECT/RAW/segmented/: U1001_1M_16k.noise.tfmask.pickle  U1001_1M_16k.speech.tfmask.pickle
btk20_src/unit_test/prototype.ny/: g-M256-m4-r1.pickle  h-M256-m4-r1.pickle
btk20_src/utils/: utils.h
src/: CMakeLists.txt  btk.h
src/aec/: Makefile.am  aec.cc  aec.h  aec.i
src/beamformer/: Makefile.am  coefficients.cc  spectralinfoarray.h  tracker.cc
src/common/: CMakeLists.txt  Makefile.am  common.h  common.i  error.h  jexception.cc  jexception.h  jpython_error.cc  mach_ind_io.cc  mach_ind_io.h  memory_manager.cc  memory_manager.h  mlist.h  refcount.cc
src/convolution/: Makefile.am  convolution.cc  convolution.i
src/dereverberation/: CMakeLists.txt  Makefile.am  dereverberation.h
src/feature/: CMakeLists.txt  Makefile.am  feature.h  lpc.cc  videofeature.cc
src/include/: Makefile.am  bak.typedefs.i  complex.i  jexception.i
src/lib/: Makefile.am  fmatrix.py  globalBeamformer.py  hmmBeamforming.py  kalman2.py  mnBeamforming.py  multiplot.py  play.py  plot.py  sound.py  subbandBeamforming.py  utils.py
src/lms/: Makefile.am  lms.i
src/localization/: Makefile.am  mcc_localizer.cc  mcc_localizer.h
src/matrix/: Makefile.am  blas1_c.cc  gslmatrix.h
src/modulated/: CMakeLists.txt  Makefile.am  modulated.cc  modulated.h  modulated.i  pc_lattice.h  prototype_design.cc  prototype_design.h
src/objective_measure/: CMakeLists.txt  Makefile.am  objective_measure.i
src/postfilter/: Makefile.am  postfilter.cc  postfilter.h  spectralsubtraction.cc  spectralsubtraction.h
src/sad/: CMakeLists.txt  Makefile.am  sad.cc  sad.i  sad.txt  sad_feature.cc
src/square_root/: CMakeLists.txt  Makefile.am  kalman.py  square_root.h
src/src/: Makefile.am  beamformerMLC.cc  filterBankTest.cc  quality_assessment  rt_ss.cc  ss.cc  superdirectiveBeamformer.cc  synthMultiChannelWav.cc
src/stream/: Makefile.am  file_stream.h  stream.h
src/tde/: Makefile.am
src/tools/filterbank/: DesignNyquistFilterBank.m  convertPythonBin.py  design_de_haan_filter.py  design_nyquist_filter.py  mynull.m  test_filter_prototype.py  test_nyquist_filter_prototype.py  test_oversampled_dft_filter.py  test_pr_filter_prototype.py  testdeHaanFilterBankDesign.py
src/unit_test/: pca_trainer.py
src/utils/: CMakeLists.txt  Makefile.am  utils.cc  utils.i
