pkgpython_PYTHON = \
	utils.py \
	cepstralFrontend.py hmmBeamforming.py signalGen.py \
	_dbase.py kalman2.py sound.py \
	dbase.py lmsBeamforming.py SrpPhatLocalizer.py \
	featureADC.py multiplot.py subbandBeamforming.py \
	GGDEst.py GGDcEst.py\
	fmatrix.py play.py \
	globalOpt.py plot.py \
	__init__.py
